FInalisation de la mise en forme

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           background-color: yellow;
         }
     </style>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <audio id="newMessageSound" src="/sound/newMessage.wav" preload="auto"></audio>
